# hyperhttp

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: bench.yml  release.yml  tests.yml
docs/: advanced.md  changelog.md  contributing.md  index.md  installation.md  performance.md  quickstart.md  testing.md  usage.md
docs/api/: client.md  errors.md  mock.md  retry.md
examples/: advanced_usage.py  basic_requests.py  benchmark.py  benchmark_local.py  benchmark_multipart.py
hyperhttp/: __init__.py  _compat.py  _compression.py  _headers.py  _multipart.py  _proxy.py  _url.py  _validate.py  auth.py  client.py  cookies.py  exceptions.py  mock.py
hyperhttp/connection/: __init__.py  _streams.py  base.py  manager.py  pool.py  tls.py  transport.py
hyperhttp/errors/: circuit_breaker.py  classifier.py  retry.py  telemetry.py
hyperhttp/protocol/: __init__.py  base.py  h1.py  h2_mux.py  http1.py  http2.py  utils.py
hyperhttp/utils/: __init__.py  backoff.py  buffer_pool.py  dns_cache.py
scripts/: release.py
tests/: test_client.py  test_connection.py  test_http2.py
tests/integration/: conftest.py  test_auth.py  test_basic.py  test_dns.py  test_event_hooks.py  test_framing.py  test_h2.py  test_multipart.py  test_proxy.py  test_redirects.py  test_retry_cb.py  test_tls.py
tests/unit/: test_auth.py  test_backoff.py  test_buffer_pool.py  test_classifier.py  test_compression.py  test_cookies.py  test_dns_cache.py  test_fast_stream.py  test_h1_parser.py  test_headers.py  test_mock.py  test_multipart.py  test_pool_waiter_race.py  test_proxy.py  test_retry_policy.py  test_security_injection.py  test_security_insecure_warning.py  test_security_limits.py  test_security_log_scrub.py  test_security_proxy_auth.py  test_security_redirects.py  test_telemetry.py  test_tls.py  test_url.py
