[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperhttp"
version = "0.1.0"
description = "High-performance HTTP client library for Python"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "h2>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "aiohttp>=3.8.0",  # For comparison tests
    "httpx>=0.23.0",   # For comparison tests
    "requests>=2.28.0" # For comparison tests
]
dev = [
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.960",
    "flake8>=4.0.0",
]
doc = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hyperhttp"
"Bug Tracker" = "https://github.com/yourusername/hyperhttp/issues"
"Documentation" = "https://yourusername.github.io/hyperhttp"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true