[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperhttp"
version = "2.0.0"
description = "A high-performance async HTTP/1.1 and HTTP/2 client for Python"
readme = "README.md"
authors = [
    {name = "Latiful Mousom", email = "latifulmousom@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
requires-python = ">=3.8"
dependencies = [
    "h2>=4.1.0",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
speed = [
    "orjson>=3.9.0",
    "uvloop>=0.17.0; sys_platform != 'win32'",
    "h11>=0.14.0",
    "brotli>=1.1.0",
    "zstandard>=0.22.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aiohttp>=3.9.0",
    "httpx[http2]>=0.25.0",
    "trustme>=1.1.0",
    "hypercorn>=0.16.0",
    "brotli>=1.1.0",
]
bench = [
    "aiohttp>=3.9.0",
    "httpx[http2]>=0.25.0",
    "uvloop>=0.17.0; sys_platform != 'win32'",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
doc = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0",
]

[project.urls]
"Homepage" = "https://github.com/lmousom/hyperhttp"
"Bug Tracker" = "https://github.com/lmousom/hyperhttp/issues"
"Documentation" = "https://hyperhttp.readthedocs.io"
"Source Code" = "https://github.com/lmousom/hyperhttp"

[tool.setuptools.packages.find]
include = ["hyperhttp*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error::DeprecationWarning:hyperhttp.*",
]

[tool.coverage.run]
branch = true
source = ["hyperhttp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "raise ImportError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
omit = [
    "tests/*",
    "examples/*",
]
show_missing = true
skip_covered = false
